# huey

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: flakehub-publish-tagged.yml
src/: color.rs  error.rs  format.rs  highlight.rs  main.rs
