[package]
name = "huey"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Neovim lua color scheme generator written in Rust"
homepage = "https://github.com/oahlen/huey"

[dependencies]
anyhow = "=1.0.98"
clap = { version = "=4.5.40", features = ["derive"] }
indexmap = "2.9.0"
lazy_static = "=1.5.0"
regex = "=1.11.1"
serde = { version = "=1.0.219", features = ["derive"] }
thiserror = "=2.0.12"
toml = { version = "=0.8.23", features = ["preserve_order"] }
